[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idempotency-agent"
version = "1.0.0"
description = "SDET agent để verify tính idempotency của HTTP API (response + DB side-effects)"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.0",
    "openai>=1.30.0",
    "pymongo==4.7.2",
    "pymysql==1.1.1",
    "deepdiff==7.0.1",
    "jinja2==3.1.4",
    "python-dotenv==1.0.1",
    "click==8.1.7",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "respx==0.21.1",
    "ruff==0.4.4",
]

[project.scripts]
idempotency-agent = "idempotency_agent.cli:main"
idempotency-web = "idempotency_agent.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
idempotency_agent = ["templates/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Chỉ collect test theo function — tránh nhầm domain class TestCase/TestStatus.
python_classes = []
markers = [
    "unit: pure logic, no network/DB",
    "integration: cần network/DB hoặc mock HTTP",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
